--- a/.env
+++ b/.env
@@ -37,5 +37,10 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
+MAILER_DSN="smtp://247e0e108a38a5:d01d63e4ab7e58@sandbox.smtp.mailtrap.io:2525"
 ###< symfony/mailer ###
+
+###> symfony/mailtrap-mailer ###
+# MAILER_DSN=mailtrap+api://TOKEN@default
+# MAILER_DSN=mailtrap+smtp://PASSWORD@default
+###< symfony/mailtrap-mailer ###
